--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,11 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Local files
+.DS_Store
+**/.vscode/*
+dist/**/*
+objs/**/*
+bin/**/*
+libs/minilibx*/**/*
