--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libs/libft"]
 	path = libs/libft
 	url = git@github.com:juslee/libft.git
+[submodule "libs/MLX42"]
+	path = libs/MLX42
+	url = git@github.com:codam-coding-college/MLX42.git
